--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   plaid-flash:
     build:
@@ -10,11 +8,11 @@ services:
       - "3000:3000"
     environment:
       # Plaid API Configuration
-      # Replace these values with your own Plaid credentials
+      # See README.md for more details
       - PLAID_CLIENT_ID=your_client_id_here
       - PLAID_SECRET=your_sandbox_secret_here
       - PLAID_ENV=sandbox
     restart: unless-stopped
     labels:
-      com.plaid-flash.description: "Plaid Flash - Quick Plaid Link integration app"
+      com.plaid-flash.description: "Plaid Flash - Test Plaid Link, in a Flash"
 
